--- a/Lab2/README
+++ b/Lab2/README
@@ -1,3 +1,3 @@
 Size                                    10            10^2            10^3            10^4            10^5            10^6            10^7
-Single Threading
-Multi Threading (6 Cores)               0ms           0ms             0ms             0ms             3ms             36ms            4004ms
+Single Threading                        0ms           0ms             0ms             0ms             3ms             36ms            4004ms
+Multi Threading (6 Cores)
